# libusb-cpp

./: CMakeLists.txt  libusb.cpp  usb.cpp  usb.h  usbdevice.cpp  usbdevice.h  usbexcept.h  usbhandle.h  usbhandleimpl.cpp  usbhandleimpl.h  usblist.cpp  usblist.h
tests/: CMakeLists.txt  tests.cpp
